; ModuleID = '/home/carl/AnghaBench/scrcpy/app/src/extr_controller.c_run_controller.c'
source_filename = "/home/carl/AnghaBench/scrcpy/app/src/extr_controller.c_run_controller.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.controller = type { i32, i32, i64, i32 }
%struct.control_msg = type { i32 }

@.str = private unnamed_addr constant [30 x i8] c"Could not write msg to socket\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @run_controller to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @run_controller(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.controller*, align 8
  %4 = alloca %struct.control_msg, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %7 = load i8*, i8** %2, align 8
  %8 = bitcast i8* %7 to %struct.controller*
  store %struct.controller* %8, %struct.controller** %3, align 8
  br label %9

9:                                                ; preds = %61, %1
  %10 = load %struct.controller*, %struct.controller** %3, align 8
  %11 = getelementptr inbounds %struct.controller, %struct.controller* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = call i32 @mutex_lock(i32 %12)
  br label %14

14:                                               ; preds = %26, %9
  %15 = load %struct.controller*, %struct.controller** %3, align 8
  %16 = getelementptr inbounds %struct.controller, %struct.controller* %15, i32 0, i32 2
  %17 = load i64, i64* %16, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %24, label %19

19:                                               ; preds = %14
  %20 = load %struct.controller*, %struct.controller** %3, align 8
  %21 = getelementptr inbounds %struct.controller, %struct.controller* %20, i32 0, i32 1
  %22 = call i64 @cbuf_is_empty(i32* %21)
  %23 = icmp ne i64 %22, 0
  br label %24

24:                                               ; preds = %19, %14
  %25 = phi i1 [ false, %14 ], [ %23, %19 ]
  br i1 %25, label %26, label %34

26:                                               ; preds = %24
  %27 = load %struct.controller*, %struct.controller** %3, align 8
  %28 = getelementptr inbounds %struct.controller, %struct.controller* %27, i32 0, i32 3
  %29 = load i32, i32* %28, align 8
  %30 = load %struct.controller*, %struct.controller** %3, align 8
  %31 = getelementptr inbounds %struct.controller, %struct.controller* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 8
  %33 = call i32 @cond_wait(i32 %29, i32 %32)
  br label %14

34:                                               ; preds = %24
  %35 = load %struct.controller*, %struct.controller** %3, align 8
  %36 = getelementptr inbounds %struct.controller, %struct.controller* %35, i32 0, i32 2
  %37 = load i64, i64* %36, align 8
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %39, label %44

39:                                               ; preds = %34
  %40 = load %struct.controller*, %struct.controller** %3, align 8
  %41 = getelementptr inbounds %struct.controller, %struct.controller* %40, i32 0, i32 0
  %42 = load i32, i32* %41, align 8
  %43 = call i32 @mutex_unlock(i32 %42)
  br label %62

44:                                               ; preds = %34
  %45 = load %struct.controller*, %struct.controller** %3, align 8
  %46 = getelementptr inbounds %struct.controller, %struct.controller* %45, i32 0, i32 1
  %47 = call i32 @cbuf_take(i32* %46, %struct.control_msg* %4)
  store i32 %47, i32* %5, align 4
  %48 = load i32, i32* %5, align 4
  %49 = call i32 @SDL_assert(i32 %48)
  %50 = load %struct.controller*, %struct.controller** %3, align 8
  %51 = getelementptr inbounds %struct.controller, %struct.controller* %50, i32 0, i32 0
  %52 = load i32, i32* %51, align 8
  %53 = call i32 @mutex_unlock(i32 %52)
  %54 = load %struct.controller*, %struct.controller** %3, align 8
  %55 = call i32 @process_msg(%struct.controller* %54, %struct.control_msg* %4)
  store i32 %55, i32* %6, align 4
  %56 = call i32 @control_msg_destroy(%struct.control_msg* %4)
  %57 = load i32, i32* %6, align 4
  %58 = icmp ne i32 %57, 0
  br i1 %58, label %61, label %59

59:                                               ; preds = %44
  %60 = call i32 @LOGD(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0))
  br label %62

61:                                               ; preds = %44
  br label %9

62:                                               ; preds = %59, %39
  ret i32 0
}

declare dso_local i32 @mutex_lock(i32) #1

declare dso_local i64 @cbuf_is_empty(i32*) #1

declare dso_local i32 @cond_wait(i32, i32) #1

declare dso_local i32 @mutex_unlock(i32) #1

declare dso_local i32 @cbuf_take(i32*, %struct.control_msg*) #1

declare dso_local i32 @SDL_assert(i32) #1

declare dso_local i32 @process_msg(%struct.controller*, %struct.control_msg*) #1

declare dso_local i32 @control_msg_destroy(%struct.control_msg*) #1

declare dso_local i32 @LOGD(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
